--- a/presentacion.tex
+++ b/presentacion.tex
@@ -476,7 +476,24 @@ Montevideo, Uruguay}
 \frame{\tableofcontents[currentsection]}
 
 \frame{
-	\frametitle{Conclusiones y trabajo futuro}
+	\frametitle{Conclusiones}
+	\begin{itemize}
+	\item Se relevó la literatura relacionada (CPP, DARP, TPP) y se presentaron dos variantes del problema.
+	\item Se implementaron \textbf{cuatro} AE: dos para cada variante del problema.
+	\item El análisis experimental se realizó sobre instancias realistas.
+	\item Los AE implementados fueron comparados contra algoritmos ávidos.
+	\item Variante monoobjetivo: mejoras de hasta 35.9\% (seqEA) y 41.0\% (p$\mu$EA) sobre algoritmo ávido.
+	\item Variante multiobjetivo: mejoras de hasta 72.8\% y 101.2\% (p$\mu$MOEA/D); 105.2\% y 75.1\% (NSGA--II) en costo y demora sobre algoritmos ávidos.
+
+	\item Se implementó el planificador de viajes compartidos en taxis, disponible públicamente en \url{www.mepaseaste.uy}.
+	\item Se publicaron \textbf{cuatro} artículos en conferencias internacionales.
+	\item \textbf{Primer premio} del jurado en ``Ingeniería deMuestra 2014'' .
+	\end{itemize}
+}
+
+
+\frame{
+	\frametitle{Trabajo futuro}
 
 }
 
