--- a/presentacion.tex
+++ b/presentacion.tex
@@ -512,6 +512,14 @@ Montevideo, Uruguay}
 	
 }
 
+\frame{
+	\frametitle{Frentes de Pareto: p$\mu$MOEA/D vs. NSGA--II}
+	\alert{\textit{NSGA--II} alcanza mejores soluciones} con una mayor cantidad de puntos no dominados distribuidos homogéneamente a lo largo del frente.
+	
+	\input{./evaluacion_experimental/fp_comparacion/imagenes.tex}
+	
+}
+
 
 % Slide - Planificador de viajes compartidos en línea ==============================================================
 \section{Planificador de viajes compartidos en línea} 
