Agrego mejora greedy de ambos algoritmos

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -513,6 +513,14 @@ Montevideo, Uruguay}
 }
 
 \frame{
+	\frametitle{Mejora frente a algoritmos ávidos vs. tiempo de ejecución}
+	El enfoque multiobjetivo explícito de \textit{NSGA--II} permite alcanzar mejores resultados que el enfoque por descomposición de dominio aplicado en \textit{p$\mu$MOEA/D}. Sin embargo, los tiempos de ejecución son significativamente mayores.
+
+	\input{./evaluacion_experimental/tradeoff_maeb_mic/imagenes.tex}
+	
+}
+
+\frame{
 	\frametitle{Frentes de Pareto: p$\mu$MOEA/D vs. NSGA--II}
 	\alert{\textit{NSGA--II} alcanza mejores soluciones} con una mayor cantidad de puntos no dominados distribuidos homogéneamente a lo largo del frente.
 	
