Agrego cantidad de instancias

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -381,7 +381,9 @@ Montevideo, Uruguay}
 		\item \textbf{6 grandes:} 25 y 45 pasajeros (Beijing).
 		\item \textbf{4 en Montevideo:} 8 y 17 pasajeros (Montevideo).
 	\end{itemize}
-	Cuatro variantes de cada instancias para el PVCT multiobjetivo considerando distintas capacidades y tolerancias.
+	
+	\alert{22} instancias para el PVCT monoobjetivo, y un total de \alert{88} para el multiobjetivo, considerando distintas capacidades y tolerancias.
+	
 	\end{block}
 
 }
