Agrego captions perdidos en tradeoff

--- a/evaluacion_experimental/tradeoff_maeb_mic/imagenes.tex
+++ b/evaluacion_experimental/tradeoff_maeb_mic/imagenes.tex
@@ -2,7 +2,9 @@
 	\column{.5\textwidth}
 	\centering
 		\includegraphics[width=6.075cm,height=4.725cm]{./evaluacion_experimental/tradeoff_maeb_mic/costo}\\
+		\small \textit{costo}
 	\column{.5\textwidth}
 	\centering
-		\includegraphics[width=6.075cm,height=4.725cm]{./evaluacion_experimental/tradeoff_maeb_mic/demora}
+		\includegraphics[width=6.075cm,height=4.725cm]{./evaluacion_experimental/tradeoff_maeb_mic/demora}\\
+		\small \textit{demora}
 \end{columns}
