--- a/presentacion.tex
+++ b/presentacion.tex
@@ -246,9 +246,9 @@ Montevideo, Uruguay}
 	\frametitle{Algoritmos evolutivos}
 	\begin{block}{Definición}
 		\begin{itemize}
-			\item Los \textit{algoritmos evolutivos} (AE) son técnicas estocásticas que emulan el proceso de evolución natural de las especies para resolver problemas de optimización, búsqueda y aprendizaje.
-			\item Un AE es una técnica iterativa (cada iteración se denomina \textbf{generación}) que aplica operadores estocásticos sobre un conjunto de individuos (la \textbf{población}).
-			\item Cada individuo en la población codifica una solución tentativa al problema y tiene un valor de \textbf{fitness}, dado por una función de evaluación que determina su adecuación para resolver el problema. 
+			\item Los \textit{algoritmos evolutivos} (AE) son técnicas estocásticas que emulan el proceso de evolución natural de las especies para resolver problemas de optimización, búsqueda y aprendizaje.\pause
+			\item Un AE es una técnica iterativa (cada iteración se denomina \textbf{generación}) que aplica operadores estocásticos sobre un conjunto de individuos (la \textbf{población}).\pause
+			\item Cada individuo en la población codifica una solución tentativa al problema y tiene un valor de \textbf{fitness}, dado por una función de evaluación que determina su adecuación para resolver el problema. \pause
 			\item El propósito del AE es mejorar el fitness de los individuos en la población mediante la aplicación iterativa de \textbf{operadores evolutivos} a individuos seleccionados según su fitness, guiando al AE hacia soluciones tentativas de mayor calidad.
 		\end{itemize}
 	\end{block}
@@ -460,7 +460,7 @@ Montevideo, Uruguay}
 
 \frame{
 	\frametitle{Comparativa \textit{seqEA} vs. \textit{p$\mu$EA}}
-	Sobre un total de 22 instancias, \textit{p$\mu$EA} es capaz de encontrar mejores resultados que \textit{seqEA} en \alert{17}. Únicamente en una instancia de prueba \textit{seqEA} alcanzó mejores soluciones que \textit{p$\mu$EA}.
+	Sobre un total de 22 instancias, \textit{p$\mu$EA} es capaz de encontrar mejores resultados que \textit{seqEA} en \alert{17}. Únicamente en \alert{1} instancia de prueba \textit{seqEA} alcanzó mejores soluciones que \textit{p$\mu$EA}.
 	
 	\vspace{0.15cm}
 	
