Correcciones menores a pausas

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -606,10 +606,10 @@ Montevideo, Uruguay}
 	\item Incorporar datos de la \textbf{disponibilidad de los taxis} en tiempo real.\pause
 	\item Mejoras en el planificador de viajes compartidos:\pause
 	\begin{itemize}
-	\item Mejorar la experiencia de los usuarios.\pause
-	\item Desarrollar versiones para dispositivos móviles Android y Windows Phone.\pause
-	\item Soportar la variante multiobjetivo.\pause
-	\end{itemize}
+		\item Mejorar la experiencia de los usuarios.\pause
+		\item Desarrollar versiones para dispositivos móviles Android y Windows Phone.\pause
+		\item Soportar la variante multiobjetivo.
+	\end{itemize}\pause
 	\item Estudiar la aplicabilidad de los AE a otros escenarios.\pause
 	\item Estudiar otras variantes del problema (e.g., many--to--one, many--to--many).
 	\end{itemize}
