Primera ronda de imagenes finales

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -285,16 +285,17 @@ Montevideo, Uruguay}
 
 	\column{0.57\linewidth}
 		\centering
-		\includegraphics[width=.8\textwidth]{distribucion.png}
 
-		\only<1-2>{\mbox{\phantom{\includegraphics[width=0.7\textwidth]{pbx_simple.png}}}}%
-		\includegraphics<3->[width=0.7\textwidth]{pbx_simple.png}
+		\includegraphics[width=0.9\textwidth]{distribucion.png}
 
-		\only<1-3>{\mbox{\phantom{\includegraphics[width=0.6\textwidth]{em.png}}}}%
-		\includegraphics<4->[width=0.6\textwidth]{em.png}
+		\only<1-2>{\mbox{\phantom{\includegraphics[width=0.9\textwidth]{pbx_simple.png}}}}
+		\includegraphics<3->[width=0.9\textwidth]{pbx_simple.png}
 
-		\only<1-4>{\mbox{\phantom{\includegraphics[width=0.4\textwidth]{temporal.png}}}}%
-		\includegraphics<5->[width=0.4\textwidth]{temporal.png}
+		\only<1-3>{\mbox{\phantom{\includegraphics[width=0.9\textwidth]{em.png}}}}%
+		\includegraphics<4->[width=0.9\textwidth]{em.png}
+
+		\only<1-4>{\mbox{\phantom{\includegraphics[width=0.9\textwidth]{temporal.png}}}}%
+		\includegraphics<5->[width=0.9\textwidth]{temporal.png}
 	\end{columns}
 
 }
@@ -325,8 +326,8 @@ Montevideo, Uruguay}
 			\end{block}
 	\column{0.4\textwidth}
 		\centering
-		\only<1,2>{\mbox{\phantom{\includegraphics[width=0.8\textwidth]{migracion.png}}}}%
-		\includegraphics<3->[width=0.8\textwidth]{migracion.png}
+		\only<1,2>{\mbox{\phantom{\includegraphics[width=1\textwidth]{migracion.png}}}}%
+		\includegraphics<3->[width=1\textwidth]{migracion.png}
 		%\includegraphics[width=.9\textwidth]{migracion.png}
 	\end{columns}
 }
