--- a/presentacion.tex
+++ b/presentacion.tex
@@ -80,7 +80,7 @@ Montevideo, Uruguay}
 
 \frame{
 	\frametitle{Motivación} 
-	\begin{block}{Car pooling}
+	\begin{block}{Los viajes compartidos (\textit{Car Pooling})}
 		\begin{itemize}
 			\item Beneficios en el plano ecológico y económico, individuales y colectivos.
 			\item Iniciativas para atender el interés del público: carriles exclusivos, campañas para compartir los viajes al trabajo y aplicaciones para encontrar compañeros de viaje.
@@ -89,7 +89,7 @@ Montevideo, Uruguay}
 	
 	\pause 
 	
-	\begin{block}{Taxi pooling}
+	\begin{block}{Los viajes compartidos en taxis (\textit{Taxi Pooling})}
 		\begin{itemize}
 			\item Los taxis son un medio de transporte rápido y confiable, especialmente en ciudades donde el transporte público es poco eficiente.
 			\item Los taxis raramente viajan a capacidad completa, impactando en la congestión del tráfico y en la contaminación de las ciudades.
@@ -350,7 +350,6 @@ Montevideo, Uruguay}
 		\centering
 		\only<1>{\mbox{\phantom{\includegraphics[width=0.9\textwidth]{pmuMOEAD.png}}}}%
 		\includegraphics<2->[width=0.9\textwidth]{pmuMOEAD.png}
-		%\includegraphics[width=.8\textwidth]{pmuMOEAD.png}
 	\end{columns}
 	\pause
 	\begin{block}{\textit{NSGA--II}}
@@ -360,7 +359,7 @@ Montevideo, Uruguay}
 	\begin{block}{Aspectos comunes}
 		Función correctiva considera vehículos de distintas capacidades.
 		Inicialización de la población ávida y selección por torneo.
-	\end{block}\pause
+	\end{block}
 
 }
 
