--- a/evaluacion_experimental/fitness_sobre_tiempo/imagenes.tex
+++ b/evaluacion_experimental/fitness_sobre_tiempo/imagenes.tex
@@ -1,10 +1,10 @@
 \begin{columns}[t]
 \column{.5\textwidth}
 \centering
-\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fitness_sobre_tiempo/chicas_1.pdf}\\
-\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fitness_sobre_tiempo/medianas_2.pdf}
+\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fitness_sobre_tiempo/chicas_1.png}\\
+\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fitness_sobre_tiempo/medianas_2.png}
 \column{.5\textwidth}
 \centering
-\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fitness_sobre_tiempo/grandes_2.pdf}\\
-\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fitness_sobre_tiempo/montevideo_1.pdf}
+\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fitness_sobre_tiempo/grandes_2.png}\\
+\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fitness_sobre_tiempo/montevideo_1.png}
 \end{columns}
