--- a/evaluacion_experimental/fp_comparacion/imagenes.tex
+++ b/evaluacion_experimental/fp_comparacion/imagenes.tex
@@ -1,10 +1,10 @@
 \begin{columns}[t]
 \column{.5\textwidth}
 \centering
-\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fp_comparacion/Ch_6_1.pdf}\\
-\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fp_comparacion/Me_5_3.pdf}
+\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fp_comparacion/Ch_6_1.png}\\
+\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fp_comparacion/Me_5_3.png}
 \column{.5\textwidth}
 \centering
-\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fp_comparacion/Gr_5_2.pdf}\\
-\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fp_comparacion/Mo_4_3.pdf}
+\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fp_comparacion/Gr_5_2.png}\\
+\includegraphics[width=4.5cm,height=3.5cm]{./evaluacion_experimental/fp_comparacion/Mo_4_3.png}
 \end{columns}
