Correcciones sobre toda la sección de evaluacion exp

--- a/evaluacion_experimental/comparativa_clei_alio.tex
+++ b/evaluacion_experimental/comparativa_clei_alio.tex
@@ -1,4 +1,4 @@
-\centering
+{\centering
 \begin{adjustbox}{max width=0.55\textwidth}
 \begin{tabular}{ccrrrrr}
 \multicolumn {2}  {c} {\multirow{2}{*}{\textit{instancia}}}  & \multicolumn {2}  {c} {\textit{seqEA}} &\multicolumn {2}  {c}{\textit{p$\mu$EA}} &\multirow {2}  {*}{\textit{pvK--W}}\\
@@ -31,3 +31,5 @@
                                 		& \#4             	& 303.2 				& 304.7$\pm$0.5                 		& 304.1 & 304.5$\pm$0.4         & 0.1       \\\bottomrule
 \end{tabular}
 \end{adjustbox}
+
+}
