--- a/presentacion.tex
+++ b/presentacion.tex
@@ -83,7 +83,12 @@ Montevideo, Uruguay}
 	\begin{block}{Los viajes compartidos (\textit{Car Pooling})}
 		\begin{itemize}
 			\item Beneficios en el plano ecológico y económico, individuales y colectivos.
-			\item Iniciativas para atender el interés del público: carriles exclusivos, campañas para compartir los viajes al trabajo y aplicaciones para encontrar compañeros de viaje.
+			\item Iniciativas:
+			\begin{itemize}
+			\item Carriles exclusivos
+			\item Campañas para compartir los viajes al trabajo
+			\item Aplicaciones para encontrar compañeros de viaje
+			\end{itemize}
 		\end{itemize}
 	\end{block}
 	
@@ -91,10 +96,11 @@ Montevideo, Uruguay}
 	
 	\begin{block}{Los viajes compartidos en taxis (\textit{Taxi Pooling})}
 		\begin{itemize}
-			\item Los taxis son un medio de transporte rápido y confiable, especialmente en ciudades donde el transporte público es poco eficiente.
-			\item Los taxis raramente viajan a capacidad completa, impactando en la congestión del tráfico y en la contaminación de las ciudades.
+			\item Los taxis son un medio de transporte rápido y confiable.%, especialmente en ciudades donde el transporte público es poco eficiente.
+			\item Raramente viajan a capacidad completa.
+			\item Impactan en la congestión del tráfico y en la contaminación.
 			\item Tarifas altas desalientan a los usuarios.
-			\item \alert{15\%} de los accidentes fatales en Uruguay involucran a un conductor alcoholizado (UNASEV).
+			%\item \alert{15\%} de los accidentes fatales en Uruguay involucran a un conductor alcoholizado (UNASEV).
 		\end{itemize}
 	\end{block}
 }
@@ -173,13 +179,13 @@ Montevideo, Uruguay}
 	\begin{equation*}
 		\begin{split}
 			DT = \sum\limits_{t_{i}} \Bigg[\sum\limits_{j=1}^{C(t_{i})}\bigg[ &  \overbrace{\sum\limits_{h=1}^{j} time\Big(dest\big(f^{-1}(t_{i},h-1)\big), dest\big(f^{-1}(t_{i},h)\big)\Big)}^{\text{tiempo efectivo de traslado del pasajero en la posición } j \text{ del taxi } t_i} \\
-			& - \underbrace{tol\big(f^{-1}(t_{i},j)\big) + time\Big(O, dest\big(f^{-1}(t_{i},j))\Big)}_{\text{tiempo tolerado por el pasajero en la posición } j \text{ del taxi } t_i}\bigg]\Bigg]
+			& - \bigg( \underbrace{tol\big(f^{-1}(t_{i},j)\big) + time\Big(O, dest\big(f^{-1}(t_{i},j))\Big)\bigg)}_{\text{tiempo tolerado por el pasajero en la posición } j \text{ del taxi } t_i}\bigg]\Bigg]
 		\end{split}	
 	\end{equation*}
 
 	\begin{itemize}
-		\item $time: \lbrace \lbrace O \rbrace \cup D \rbrace \times D \rightarrow \mathbb{R}^+_0$ indica el tiempo de recorrido.	
-		\item $tol: P \rightarrow \mathbb{R}^+_0$  indica el tiempo adicional tolerado por cada pasajero.
+		\item Cada pasajero tiene un \alert{``nivel de apuro''} asociado.
+		\item Se consideran vehículos con \alert{diferentes capacidades}.
 	\end{itemize}
 }
 
@@ -369,13 +375,13 @@ Montevideo, Uruguay}
 
 \frame{
 	\frametitle{Generación de instancias}
-	
+
 	\begin{block}{Generación de puntos realistas en el mapa}
 		\begin{itemize}
 		\item Generador de Pedidos de Taxis (TQG) con datos de GPS de taxis de Beijing (Ma et al., 2013).\pause
 		\item Script para obtener instancias de un origen a muchos destinos.\pause
-		\item Instancias en Montevideo generadas manualmente.\pause
-		\item API para obtener tarifas TaxiFareFinder (TFF).
+		\item API para obtener tarifas TaxiFareFinder (TFF).\pause
+		\item Instancias en Montevideo generadas manualmente.
 		\end{itemize}
 	\end{block}
 	\pause
@@ -388,8 +394,38 @@ Montevideo, Uruguay}
 		\item \textbf{4 en Montevideo:} 8 y 17 pasajeros (Montevideo).
 	\end{itemize}
 	
-	\alert{22} instancias para el PVCT monoobjetivo y \alert{88} para el multiobjetivo, considerando distintas capacidades y tolerancias.
+	\alert{22} instancias para el PVCT monoobjetivo y \alert{88} instancias para el PVCT multiobjetivo, variando capacidades y tolerancias.
 	
+	\end{block}
+
+}
+
+\frame{
+	\frametitle{Metodología}
+	\begin{columns}[totalwidth=\textwidth]
+	\column{0.5\textwidth}
+	\begin{block}{Entorno de ejecución}
+		\begin{itemize}
+		\item Evaluación experimental realizada en el Cluster FING.
+		\item La infraestructura fue utilizada de modo exclusivo para evitar interferencias.
+		\end{itemize}
+	\end{block}
+	\column{0.5\textwidth}
+	\centering
+		\includegraphics[width=.85\textwidth]{cluster}
+	\end{columns}
+	\pause
+	\begin{block}{Comparación de resultados}
+	\begin{itemize}\setlength\itemsep{1pt}
+		\item \alert{30 ejecuciones independientes} de cada algoritmo sobre cada instancia.
+		\item Criterio de parada: \textbf{10.000 generaciones}.
+		\item Tests estadísticos sobre las distribuciones de resultados:
+		\begin{itemize}
+		\item Shapiro--Wilk sobre cada muestra para contrastar normalidad.
+		\item Kruskal--Wallis para comparar las muestras entre sí.
+		\end{itemize}
+		\item En ambos tests se utiliza un nivel de confianza del 95\% ($\alpha=0.05$).
+	\end{itemize}	
 	\end{block}
 
 }
@@ -398,15 +434,17 @@ Montevideo, Uruguay}
 	\frametitle{PVCT monoobjetivo}
 	\begin{block}{Entorno de ejecución}
 		\begin{itemize}
-		\item La evaluación experimental fue realizada en el Cluster FING.
+		%\item La evaluación experimental fue realizada en el Cluster FING.
 		\item \textbf{seqEA}: Dell Power Edge 2950, \textbf{1 núcleo} de Intel Xeon E5430 2.66GHz, 8GB RAM.
 		\item \textbf{p$\mu$EA}: HP Proliant DL585, \textbf{24 núcleos} de AMD Opteron 2.09GHz, 48GB RAM.
 		\end{itemize}
 	\end{block}\pause
 	\begin{block}{Configuración paramétrica}
 	\begin{itemize}
-		\item \textbf{seqEA}: 20 ejecuciones de 2000 generaciones sobre 3 instancias.\\{\small $\text{\#\textit{P}} \in \lbrace 150, 200, \alert{250}\rbrace$; $p_C \in \lbrace \alert{0.6}, 0.75, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$.}\pause	
-		\item \textbf{p$\mu$EA}: micro--población de 15 individuos, torneo ($m=2$, $k=1$), migración cada 500 generaciones. \\20 ejecuciones de 100.000 generaciones sobre 5 instancias.\\{\small $p_C \in \lbrace 0.6, \alert{0.75}, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$.}
+		\item \textbf{seqEA}: %20 ejecuciones de 2000 generaciones sobre 3 instancias.\\
+		{\small $\text{\#\textit{P}} \in \lbrace 150, 200, \alert{250}\rbrace$; $p_C \in \lbrace \alert{0.6}, 0.75, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$.}\pause	
+		\item \textbf{p$\mu$EA}: micro--población de 15 individuos, torneo ($m=2$, $k=1$), migración cada 500 generaciones. \\%20 ejecuciones de 100.000 generaciones sobre 5 instancias.\\
+		{\small $p_C \in \lbrace 0.6, \alert{0.75}, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$.}
 	\end{itemize}
 	\end{block}
 
@@ -414,7 +452,7 @@ Montevideo, Uruguay}
 
 \frame{	
 	\frametitle{Algoritmo ávido}
-	Utiliza ideas de los trabajos relacionados. Toma \textbf{decisiones localmente óptimas} y emula el comportamiento de un grupo de usuarios humanos.
+	Toma \textbf{decisiones localmente óptimas} y emula el comportamiento de un grupo de usuarios humanos. Utiliza ideas de los trabajos relacionados. 
 	\includegraphics[width=1.\linewidth]<1>{greedy_costo_1}
 	\includegraphics[width=1.\linewidth]<2>{greedy_costo_2}
 	\includegraphics[width=1.\linewidth]<3>{greedy_costo_3}
@@ -428,51 +466,59 @@ Montevideo, Uruguay}
 
 \frame{
 	\frametitle{Comparativa de métodos de inicialización}
-	\begin{block}{Metodología}
-		\begin{itemize}
-			\item 30 ejecuciones independientes de 10.000 generaciones cada una.
-			\item Los resultados no siguen una distribución normal (Shapiro--Wilk, $\alpha=0.05$).
-			\item Se utilizó Kruskal--Wallis para comparar ambas inicializaciones.
-			%\item Kruskal--Wallis permite afirmar con un nivel de confianza del 95\% que una de las inicializaciones obtuvo mejores resultados que la otra.
-		\end{itemize}
+
+	\begin{block}{Resultados \textit{seqEA}}
+	\begin{itemize}
+		\item Inicialización ávida supera a inicialización aleatoria en \alert{10} instancias.
+		\item Inicialización aleatoria supera a inicialización ávida en \alert{2} instancias.
+		\item No hay diferencias estadísticamente significativas en 10 instancias.
+	\end{itemize}
 	\end{block}
-	
-	\begin{block}{\textit{seqEA}: inicialización aleatoria vs. incialización ávida}
-		La inicialización ávida supera a la inicialización aleatoria en \alert{10} instancias de prueba, mientras que la inicialización aleatoria lo hace en tan solo \alert{2}.
+	\pause
+	\begin{block}{Resultados \textit{p$\mu$EA}}
+	\begin{itemize}
+		\item Inicialización ávida supera a inicialización aleatoria en \alert{11} instancias.
+		\item No hay instancias en las que la inicialización aleatoria supere a la inicialización ávida.
+		\item No hay diferencias estadísticamente significativas en 11 instancias.
+	\end{itemize}
 	\end{block}
-	
-	\begin{block}{\textit{p$\mu$EA}: inicialización aleatoria vs. incialización ávida}
-		La inicialización ávida supera la inicialización aleatoria en \alert{11} instancias de prueba. No hay instancias en las que se pueda afirmar que la inicialización aleatoria alcance mejores soluciones.
+	\pause
+	\begin{block}{Conclusión}
+	Se utiliza la \alert{inicialización ávida} para el resto de la evaluación experimental.
 	\end{block}
 }
 
 \frame{
 	\frametitle{Mejoras \textit{seqEA} sobre algoritmo ávido}
-	Se alcanzaron mejoras en \textbf{todas} las instancias. En el mejor caso se superó el costo del algoritmo ávido en un \alert{35.9\%}.
 	\input{./evaluacion_experimental/mejoras_greedy_clei/imagenes.tex}
+	
+	Se alcanzaron mejoras en \textbf{todas} las instancias. En el mejor caso se superó el costo del algoritmo ávido en un \alert{35.9\%} (instancia grandes \#4).
+
 }
 
 \frame{
 	\frametitle{Mejoras \textit{p$\mu$EA} sobre algoritmo ávido}
-	Se alcanzaron mejoras en \textbf{todas} las instancias. En el mejor caso se superó el costo del algoritmo ávido en un \alert{41.0\%}.
 	\input{./evaluacion_experimental/mejoras_greedy_alio/imagenes.tex}
+	
+	Se alcanzaron mejoras en \textbf{todas} las instancias. En el mejor caso se superó el costo del algoritmo ávido en un \alert{41.0\%} (instancia grandes \#4).
+
 }
 
 \frame{
 	\frametitle{Comparativa \textit{seqEA} vs. \textit{p$\mu$EA}}
-	\textit{p$\mu$EA} supera a \textit{seqEA} en \alert{17 de 22} instancas. Únicamente en \alert{1} instancia \textit{seqEA} supera a \textit{p$\mu$EA} (Kruskal--Wallis, $\alpha=0.05$).
-	
-	\vspace{0.15cm}
-	
 	\input{./evaluacion_experimental/comparativa_clei_alio.tex}
+\vspace{0.15cm}
+	\textit{p$\mu$EA} supera a \textit{seqEA} en \alert{17 de 22} instancas. Únicamente en \alert{1} instancia \textit{seqEA} supera a \textit{p$\mu$EA}.
+
 
 }
 
 \frame{
-	\frametitle{Evolución del costo a lo largo de una ejecución}
-	\textit{p$\mu$EA} alcanza mejores soluciones que \textit{seqEA} en menos tiempo. En el mejor caso alcanza una \alert{aceleración de $7.5$x} ($4.6$x en promedio).
-	
+	\frametitle{Evolución del costo a lo largo de una ejecución}	
 	\input{./evaluacion_experimental/fitness_sobre_tiempo/imagenes.tex}
+
+	\textit{p$\mu$EA} alcanza mejores soluciones que \textit{seqEA} en menos tiempo. En el mejor caso alcanza una \alert{aceleración de $7.5$x} ($4.6$x en promedio).
+
 }
 
 \frame{
@@ -480,7 +526,7 @@ Montevideo, Uruguay}
 
 	\begin{block}{Entorno de ejecución}
 		\begin{itemize}
-			\item La evaluación experimental fue realizada en Cluster FING.
+			%\item La evaluación experimental fue realizada en Cluster FING.
 			\item \textbf{p$\mu$MOEA/D}: HP Proliant DL585, \textbf{24 núcleos} de AMD Opteron 2.09GHz, 48GB RAM.
 			\item \textbf{NSGA--II}: HP Proliant DL385 G7, \textbf{1 núcleo} de AMD Opteron 6172 2.10GHz, 72GB RAM.
 		\end{itemize}
@@ -488,8 +534,12 @@ Montevideo, Uruguay}
 	
 	\begin{block}{Configuración paramétrica}
 		\begin{itemize}
-			\item \textbf{p$\mu$MOEA/D}: 30 ejecuciones de 20000 generaciones sobre 4 instancias. \\{\small $P=15$; $p_C \in \lbrace 0.6, \alert{0.75}, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$; migración cada 1000 generaciones con selección por torneo ($m=2,k=1$).}\\
-			\item \textbf{NSGA--II}: 30 ejecuciones de 5000 generaciones sobre 4 instancias. \\{\small $P=80$; $p_C \in \lbrace 0.6, \alert{0.75}, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$.}\\
+			\item \textbf{p$\mu$MOEA/D}: %30 ejecuciones de 20000 generaciones sobre 4 instancias. \\
+			{\small $\#P=15$; selección por torneo ($m=2,k=1$); migración cada 1000 generaciones reemplazando a los peores individuos\\
+			$p_C \in \lbrace 0.6, \alert{0.75}, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$}\\
+			\item \textbf{NSGA--II}: %30 ejecuciones de 5000 generaciones sobre 4 instancias. \\
+			{\small $\#P=80$; selección por torneo ($m=2,k=1$);\\
+			$p_C \in \lbrace 0.6, \alert{0.75}, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$.}\\
 		\end{itemize}
 	\end{block}
 }
@@ -498,9 +548,8 @@ Montevideo, Uruguay}
 	\frametitle{Algoritmos ávidos}
 	
 	\begin{block}{Algoritmo ávido para minimizar el costo}
-		Se utilizó el mismo algoritmo detallado previamente, tomando en cuenta las distintas capacidades de los vehículos y su disponibilidad.
+		Similar al de la variante monoobjetivo pero considerando las distintas capacidades de los vehículos.
 	\end{block}\pause
-
 	\begin{block}{Algoritmo ávido para minimizar la demora}
 		\begin{itemize}
 		\item Se crea un taxi vacío para cada pasajero con nivel máximo de apuro y se los ubica en la primera posición. 
@@ -512,17 +561,21 @@ Montevideo, Uruguay}
 }
 
 \frame{
-	\frametitle{Métricas multiobjetivo}
+	\frametitle{Resultados numéricos}
 		
 	\begin{block}{\textit{p$\mu$MOEA/D}}
-		Buena convergencia y diversidad. La cantidad de soluciones no dominadas es baja.
-		%La baja distancia generacional y el spread indican buena convergencia y diversidad. El hipervolumen refuerza estas afirmaciones, aunque la cantidad de soluciones no dominadas resulta baja.
+	Hasta \alert{101.2\%} de mejora en demora y \alert{72.8\%} en costo sobre ávidos.\pause
+		
 		\input{./evaluacion_experimental/metricas_mo_resumen_maeb.tex}
+		\small{Buena convergencia y diversidad. Pocas soluciones no dominadas.}
 	\end{block}
-
+	\pause
 	\begin{block}{\textit{NSGA--II}}
-		Mayor cantidad de puntos no dominados (hasta 67/80). Buena convergencia y diversidad en las soluciones encontradas.	
+		Hasta \alert{105.2\%} de mejora en demora y \alert{75.1\%} en costo sobre ávidos.\pause
+		
 		\input{./evaluacion_experimental/metricas_mo_resumen_mic.tex}
+		\small{Mayor cantidad de puntos no dominados (hasta 67/80). Buena convergencia y diversidad en las soluciones encontradas.}
+
 	\end{block}	
 	
 }
@@ -530,9 +583,10 @@ Montevideo, Uruguay}
 
 \frame{
 	\frametitle{Frentes de Pareto: p$\mu$MOEA/D vs. NSGA--II}
-	\alert{\textit{NSGA--II} alcanza mejores soluciones}: mayor cantidad de puntos no dominados distribuidos homogéneamente.
-	
 	\input{./evaluacion_experimental/fp_comparacion/imagenes.tex}
+
+	\alert{\textit{NSGA--II} alcanza mejores soluciones}: mayor cantidad de puntos no dominados distribuidos homogéneamente a lo largo del frente.
+
 	
 }
 
@@ -540,8 +594,10 @@ Montevideo, Uruguay}
 	\frametitle{Mejora frente a algoritmos ávidos vs. tiempo de ejecución}
 	%El enfoque multiobjetivo explícito de \textit{NSGA--II} permite alcanzar mejores resultados que el enfoque por descomposición de dominio aplicado en \textit{p$\mu$MOEA/D}. Sin embargo, los tiempos de ejecución son significativamente mayores.
 
-	\textit{NSGA--II} alcanza mejores soluciones pero requiere de un mayor tiempo de ejecución que \textit{p$\mu$MOEA/D}.
 	\input{./evaluacion_experimental/tradeoff_maeb_mic/imagenes.tex}
+	\vspace{0.3cm}
+	\textit{NSGA--II} alcanza mejores soluciones pero requiere de un mayor tiempo de ejecución que \textit{p$\mu$MOEA/D}. %Es necesario tomar una decisión de compromiso.
+
 	
 }
 
@@ -584,7 +640,7 @@ Montevideo, Uruguay}
 \frame{
 	\frametitle{Conclusiones}
 	\begin{itemize}
-	\item Se relevó la literatura relacionada (CPP, DARP, TPP) y se presentaron dos variantes del problema.\pause
+	\item Se relevó la literatura relacionada (CPP, DARP, TPP) y se presentaron \textbf{dos} variantes del problema.\pause
 	\item Se implementaron \textbf{cuatro} AE: dos para cada variante del problema.\pause
 	\item El análisis experimental se realizó sobre \textbf{instancias realistas}.\pause
 	\item Los AE implementados fueron comparados contra algoritmos ávidos.\pause
@@ -615,8 +671,8 @@ Montevideo, Uruguay}
 	\end{block}
 	\begin{block}{Problemas relacionados}
 	\begin{itemize}
-	\item Estudiar la aplicabilidad de los AE a otros escenarios.\pause
 	\item Estudiar otras variantes del problema (many--to--one, many--to--many).
+	\item Estudiar la aplicabilidad de los AE a otros escenarios.\pause
 	\end{itemize}
 	\end{block}
 }
