--- a/presentacion.tex
+++ b/presentacion.tex
@@ -496,7 +496,7 @@ Montevideo, Uruguay}
 	\frametitle{Mejoras \textit{seqEA} sobre algoritmo ávido}
 	\input{./evaluacion_experimental/mejoras_greedy_clei/imagenes.tex}
 	
-	Se alcanzaron mejoras en \textbf{todas} las instancias. En el mejor caso se superó el costo del algoritmo ávido en un \alert{35.9\%} (instancia grandes \#4).
+	Se alcanzaron mejoras en \textbf{todas} las instancias. En el mejor caso se mejoró el costo del algoritmo ávido en un \alert{35.9\%} (instancia grandes \#4).
 
 }
 
@@ -504,7 +504,7 @@ Montevideo, Uruguay}
 	\frametitle{Mejoras \textit{p$\mu$EA} sobre algoritmo ávido}
 	\input{./evaluacion_experimental/mejoras_greedy_alio/imagenes.tex}
 	
-	Se alcanzaron mejoras en \textbf{todas} las instancias. En el mejor caso se superó el costo del algoritmo ávido en un \alert{41.0\%} (instancia grandes \#4).
+	Se alcanzaron mejoras en \textbf{todas} las instancias. En el mejor caso se mejoró el costo del algoritmo ávido en un \alert{41.0\%} (instancia grandes \#4).
 
 }
 
