Mejoro seccion de AEs

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -252,10 +252,12 @@ Montevideo, Uruguay}
 	\frametitle{Algoritmos evolutivos}
 	\begin{block}{Definición}
 		\begin{itemize}
-			\item Los \textit{algoritmos evolutivos} (AE) son técnicas estocásticas que emulan el proceso de evolución natural de las especies para resolver problemas de optimización, búsqueda y aprendizaje.\pause
-			\item Un AE es una técnica iterativa (cada iteración se denomina \textbf{generación}) que aplica operadores estocásticos sobre un conjunto de individuos (la \textbf{población}).\pause
-			\item Cada individuo en la población codifica una solución tentativa al problema y tiene un valor de \textbf{fitness}, dado por una función de evaluación que determina su adecuación para resolver el problema. \pause
-			\item El propósito del AE es mejorar el fitness de los individuos en la población mediante la aplicación iterativa de \textbf{operadores evolutivos} a individuos seleccionados según su fitness, guiando al AE hacia soluciones tentativas de mayor calidad.
+			\item Técnicas estocásticas que emulan el proceso de evolución natural de las especies.\pause
+			\item Aplican a problemas de \alert{optimización}, búsqueda y aprendizaje.\pause
+			\item Técnica iterativa (\textbf{generación}) que aplica operadores estocásticos sobre un conjunto de individuos (\textbf{población}).\pause
+			\item Cada individuo codifica una solución tentativa al problema y tiene un valor de \textbf{fitness}.\pause
+			\item El propósito es mejorar el fitness de los individuos en la población mediante la aplicación de \textbf{operadores evolutivos}.\pause
+			\item Los operadores guian al algoritmo evolutivo hacia soluciones tentativas de mayor calidad.
 		\end{itemize}
 	\end{block}
 }
