Algunas mejoras a la primera parte..

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -172,6 +172,7 @@ Montevideo, Uruguay}
 
 \frame{
 	\frametitle{Variante multiobjetivo del PVCT: formulación matemática}
+	\pause
 	Se busca minimizar simultáneamente el \alert{costo total} y la \alert{demora total}.\pause
 	\begin{equation*}
 			CT  =  \sum\limits_{t_{i}, C(t_{i})\neq0} \Bigg[B+\sum\limits_{j=1}^{C(t_{i})}cost\bigg(dist\overbrace{\Big(dest\big(f^{-1}(t_{i},j-1)\big),dest\big(f^{-1}(t_{i},j)\big)\Big)}^{\text{destinos consecutivos en el recorrido del taxi } t_i}\bigg)\Bigg]
@@ -253,7 +254,7 @@ Montevideo, Uruguay}
 	\begin{block}{Definición}
 		\begin{itemize}
 			\item Técnicas estocásticas que emulan el proceso de evolución natural de las especies.\pause
-			\item Aplican a problemas de \alert{optimización}, búsqueda y aprendizaje.\pause
+			\item Aplicadas a problemas de \alert{optimización}, búsqueda y aprendizaje.\pause
 			\item Técnica iterativa (\textbf{generación}) que aplica operadores estocásticos sobre un conjunto de individuos (\textbf{población}).\pause
 			\item Cada individuo codifica una solución tentativa al problema y tiene un valor de \textbf{fitness}.\pause
 			\item El propósito es mejorar el fitness de los individuos en la población mediante la aplicación de \textbf{operadores evolutivos}.\pause
