--- a/presentacion.tex
+++ b/presentacion.tex
@@ -533,7 +533,7 @@ Montevideo, Uruguay}
 	\begin{block}{Entorno de ejecución}
 		\begin{itemize}
 			%\item La evaluación experimental fue realizada en Cluster FING.
-			\item \textbf{p$\mu$MOEA/D}: HP Proliant DL585, \textbf{24 núcleos} de AMD Opteron 2.09GHz, 48GB RAM.
+			\item \textbf{p$\mu$MOEA/D}: HP Proliant DL585, \textbf{24 núcleos} de AMD Opteron 6272 2.09GHz, 48GB RAM.
 			\item \textbf{NSGA--II}: HP Proliant DL385 G7, \textbf{1 núcleo} de AMD Opteron 6172 2.10GHz, 72GB RAM.
 		\end{itemize}
 	\end{block}\pause
@@ -677,8 +677,8 @@ Montevideo, Uruguay}
 	\end{block}
 	\begin{block}{Problemas relacionados}
 	\begin{itemize}
-	\item Estudiar otras variantes del problema (many--to--one, many--to--many).
-	\item Estudiar la aplicabilidad de los AE a otros escenarios.\pause
+	\item Estudiar otras variantes del problema (many--to--one, many--to--many).\pause
+	\item Estudiar la aplicabilidad de los AE a otros escenarios.
 	\end{itemize}
 	\end{block}
 }
