Agrego itemize necesario

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -175,7 +175,7 @@ Montevideo, Uruguay}
 	\pause
 		\begin{itemize}
 		\item Se busca minimizar simultáneamente el \alert{costo total} y la \alert{demora total}.\pause
-		\item Se añadió realismo con dos variables más:\pause
+		\item Se incorporan dos variables:\pause
 		\begin{itemize}
 			\item Cada pasajero tiene un \alert{``nivel de apuro''} asociado.\pause
 			\item Se consideran vehículos con \alert{diferentes capacidades}.
@@ -205,9 +205,10 @@ Montevideo, Uruguay}
 	\pause
 
 	\begin{block}{Estrategias de resolución}
-	Cuando se utilizan instancias de tamaños realistas, los algoritmos exactos tradicionales no resultan útiles para una planificación eficiente.
-
-	\alert{Heurísticas} y \alert{metaheurísticas} permiten calcular soluciones de calidad aceptable en tiempos razonables.
+	\begin{itemize}
+		\item Con instancias de tamaños realistas los algoritmos exactos tradicionales no resultan útiles para una planificación eficiente.
+		\item \alert{Heurísticas} y \alert{metaheurísticas} son necesarias para calcular soluciones de calidad aceptable en tiempos razonables.
+	\end{itemize}
 	\end{block}
 
 }
